--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
        <article>
-        <h2>Artigo 001</h2>
-        <p>Texto Artigo 001</p>
+        <h2>Curso de HTML5 com CSS3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus qui, veritatis doloribus quaerat possimus ipsa autem, saepe asperiores delectus voluptatum odit maxime corrupti officia. Ex sint doloribus delectus rem quisquam.</p>
        </article>
        <article>
-           <h2>Artigo 002</h2>
-           <p>Texto Artigo 002</p>
+           <h2>Curso de JavaScript</h2>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dignissimos odio autem doloremque asperiores sint possimus dolorum voluptatum a dolores aspernatur facere tempora ratione quas cum, impedit soluta consequatur eaque?</p>
        </article>
         
     </main>
